Modbus/TCP: Calculating the drop-out criteria for special data dissection fails.
This issue was migrated from bug 5997 in our old bug tracker.
Original bug information:
Reporter: Roland Knall
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Ubuntu
Platform: x86-64
Version: 1.6.0
Attachments:
wireshark_epan_dissectors_modbus.patch: Changes the dropout criteria before other dissectors are being called.