From Roland Knall: Modbus/TCP: Calculating the drop-out criteria for special data dissection fails. https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=5997

svn path=/trunk/; revision=37566